--- a/style.css
+++ b/style.css
@@ -352,3 +352,17 @@ a:focus {
 		stroke-width: var(--cursor-stroke-width);
 	}
 }
+
+.btn-audio{
+	position: absolute;
+	width: 100px;
+	height: 25px;
+	top: 10px;
+	left: 10px;
+	font-size: 14px;
+	font-weight: 600;
+	border: none;
+	border-radius: 5px;
+	color: rgb(219, 50, 20);
+	
+}
