--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ main {
 body {
 	margin: 0;
 	--color-text: #d05400;
-    --color-bg: #0c0c0c;
+    --color-bg: #eec9d2;
     --color-link: #6b5537;
 	--color-link-hover: #fff;
 	--color-content-title-sub: #6b5537;
